@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.387 2005/09/21 19:58:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.388 2005/09/22 16:26:31 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  add code in _edit_config() to comment line where variable is defined
+  previously
 
   21 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
